# portman-cli

./: .gitignore  CLAUDE.md  LICENSE  README.md  portman-technical-spec.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/portman/: __init__.py  __main__.py  allocator.py  cli.py  config.py  console.py  context.py  db.py  direnv.py  discovery.py  pruner.py  system.py
src/portman/commands/: __init__.py  book.py  common.py  config.py  context.py  discover.py  export.py  gc.py  get.py  init.py  list.py  prune.py  release.py  status.py
tests/: conftest.py  test_allocator.py  test_context.py  test_db.py  test_discovery.py  test_pruner.py
