[project]
name = "portman-cli"
version = "1.0.0"
description = "Port Manager for Development Environments"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["docker", "ports", "development", "direnv", "worktree"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "platformdirs>=4.0.0",
]

[project.scripts]
portman = "portman.cli:main"

[project.urls]
Homepage = "https://github.com/jpoutrin/portman-cli"
Documentation = "https://github.com/jpoutrin/portman-cli#readme"
Repository = "https://github.com/jpoutrin/portman-cli"
Issues = "https://github.com/jpoutrin/portman-cli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portman"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "types-pyyaml>=6.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=portman --cov-report=term-missing"
